# Atomic_Habits

./: .coverage  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
.github/workflow/: ci.yaml
.github/workflows/: ci.yaml
cofig/: settings.py  urls.py
config/: settings.py  urls.py
habits/: admin.py  models.py  pagination.py  serializers.py  services.py  tasks.py  tests.py  urls.py  validators.py  views.py
habits/migrations/: 0001_initial.py  0002_rename_rewards_habit_reward_and_more.py  0003_habit_owner.py
users/: admin.py  models.py  serializers.py  urls.py  views.py
users/management/commands/: csu.py
users/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_username_user_avatar_and_more.py  0003_user_tg_chat_id.py
