[tool.poetry]
name = "atomic-habits"
version = "0.1.0"
description = ""
authors = ["Bazavod <eugeny.bazavod@list.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.2.4"
djangorestframework = "^3.16.0"
python-dotenv = "^1.1.1"
psycopg2-binary = "^2.9.10"
pillow = "^11.3.0"
ipython = "^9.4.0"
django-filter = "^25.1"
djangorestframework-simplejwt = "^5.5.1"
coverage = "^7.10.1"
coreapi = "^2.3.3"
drf-spectacular = "^0.28.0"
stripe = "^12.3.0"
forex-python = "^1.9.2"
celery = "^5.5.3"
eventlet = "^0.40.2"
redis = "^6.2.0"
django-celery-beat = "^2.8.1"
django-cors-headers = "^4.7.0"
pytest = "^8.4.1"


[tool.poetry.group.lint.dependencies]
black = "^25.1.0"
flake8 = "^7.3.0"
isort = "^6.0.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
